--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 ---
+<head>
+  <link rel="icon" href="favicon.ico" type="image/x-icon"> 
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
+</head>
 
 <div class="home">
 
