Worked on Mobile support. Mainly edited site nav and how the paper summaries page is displayed. Still need to mess with the goodreads html fragment.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
-layout: default
+layout: page
+title: Paper Summaries
 ---
 
 <div class="home">
@@ -12,15 +13,16 @@ layout: default
     <div class="postDay">
       {{post.tag}}
     </div>
-    <br>
     <div class="postTitle">
     
     <a class='postLink' href="{{site.url}}{{site.baseurl}}{{post.url}}">{{post.title}}</a>
     </div>
 
     <div class="postExt">
-   {{ post.content | strip_html | truncatewords:20}}
+   {{ post.paper_ref }}
     </div>
+    <br>
+
   </div>
 
 
